cluster/core/rook-ceph/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
  annotations:
    velero.io/exclude-from-backup: "true"
