cluster/core/rook-ceph/dashboard-ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: rook-ceph-mgr-dashboard
    namespace: rook-ceph
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-staging
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
    labels:
        app.kubernetes.io/instance: rook-ceph-mgr-dashboard
        app.kubernetes.io/name: rook-ceph-mgr-dashboard
spec:
    ingressClassName: traefik
    rules:
        - host: ENC[AES256_GCM,data:CvHqnJQnPI7YimdAepsiffDExROxI2iuBs5k,iv:MtUDcVX3i+WF6GTwXa1ZieDawFlOnL7QaqFWOAxbc8U=,tag:LckDsGHJ69co59yfPlLnXA==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: rook-ceph-mgr-dashboard
                        port:
                            name: http-dashboard
    tls:
        - hosts:
            - ENC[AES256_GCM,data:J+85FMNbPnOxiGm7VsL2wRWRDYmHkHUrhtpa,iv:KDJlj+xEtH83VwmsnWc424IA0kHseFrhdQSTQFg1GMs=,tag:+zt5lFF9w8/Uiuav26/gqA==,type:str]
          secretName: rook-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2021-11-05T01:31:19Z"
    mac: ENC[AES256_GCM,data:mwiBQtomim7wGK78MeB64mIQZKqXh0nHBmGSnDzTfIppl/5ywPfCXQ3f9OG25pjHmgNST3gOm+13aQ6bIWSTpxZe3hLOFsYwQO2c/7zVyIf2kM90eFIRQFCHLyIji/ScmiayRcFGg4sKC5YoqsfUwECGcK+K1IYOMPuhyZNN+J0=,iv:gEGMUANYMdDAuaZnoUEJugpM2rGh6w0CqatJDbNIgv8=,tag:ITkZqQ1mcf4Mb3PVizwhNw==,type:str]
    pgp:
        - created_at: "2021-11-03T22:55:39Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA80P3erPiRpkARAApCxg1y8WMINVVW6tFZiYheBI5M8PhmeStjS8zeWCjWKw
[...]
            =OSVv
            -----END PGP MESSAGE-----
          fp: F92C1A4A2B35F826A1E364EFF5A1747BE18D04FC
    encrypted_regex: ^(helm|data|stringData|networkPath|hosts?|loadBalancerIP|image|email|dnsZones|dnsNames|match)$
    version: 3.7.1
